added departmentController create part and zod schemas

--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "express-session": "^1.18.1",
     "mongoose": "^8.10.1",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
