--- a/backend/package.json
+++ b/backend/package.json
@@ -18,14 +18,21 @@
   "homepage": "https://github.com/sheshusaiDarwinbox/internal-employee-freelance-hub#readme",
   "description": "",
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
+    "@types/mongoose-paginate-v2": "^1.6.4",
+    "@types/nodemailer": "^6.4.17",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "mongoose": "^8.10.1",
+    "mongoose-paginate-v2": "^1.9.0",
+    "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "zod": "^3.24.2"
