--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,12 @@
     "autoprefixer": "^10.4.20",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^12.4.7",
+    "lucide-react": "^0.475.0",
+    "mongoose": "^8.10.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "tailwindcss": "^3.4.17"
   },
