--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,12 @@
   "homepage": "https://github.com/sheshusaiDarwinbox/internal-employee-freelance-hub#readme",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.758.0",
+    "@aws-sdk/lib-storage": "^3.758.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
+    "@types/formidable": "^3.4.5",
     "@types/mongoose-paginate-v2": "^1.6.4",
     "@types/nodemailer": "^6.4.17",
     "bcrypt": "^5.1.1",
@@ -30,6 +33,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "formidable": "^3.5.2",
     "mongoose": "^8.10.1",
     "mongoose-paginate-v2": "^1.9.0",
     "nodemailer": "^6.10.0",
