rewards backend and frontend done

--- a/backend/package.json
+++ b/backend/package.json
@@ -52,6 +52,7 @@
     "@types/mongoose": "^5.11.96",
     "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
+    "@types/uuid": "^10.0.0",
     "typescript": "^5.7.3"
   }
 }
