--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^7.2.0",
     "react-router-redux": "^4.0.8",
     "redux-persist": "^6.0.0",
+    "swiper": "^11.2.5",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
