--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,8 @@
     "redux-persist": "^6.0.0",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.1.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
