--- a/backend/package.json
+++ b/backend/package.json
@@ -20,16 +20,22 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/lib-storage": "^3.758.0",
+    "@aws-sdk/s3-request-presigner": "^3.758.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
     "@types/formidable": "^3.4.5",
+    "@types/ioredis": "^4.28.10",
     "@types/mime-types": "^2.1.4",
     "@types/mongoose-paginate-v2": "^1.6.4",
+    "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
+    "@types/redis": "^4.0.10",
+    "@types/socket.io": "^3.0.1",
     "@types/uuid": "^10.0.0",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.41.8",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -37,12 +43,16 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "formidable": "^3.5.2",
+    "ioredis": "^5.6.0",
     "mime-types": "^2.1.35",
     "mongoose": "^8.10.1",
     "mongoose-paginate-v2": "^1.9.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "redis": "^4.7.0",
+    "socket.io": "^4.8.1",
     "tcs": "^10.0.2",
     "zod": "^3.24.2"
   },
