--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-router-redux": "^4.0.8",
+    "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.2.5",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.1.0",
