--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "@types/uuid": "^10.0.0",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
+    "bull": "^4.16.5",
     "bullmq": "^5.41.8",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
