--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.9",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^12.4.7",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.10.1",
     "postcss": "^8.5.3",
