--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "eslint"
   },
   "repository": {
@@ -47,6 +47,7 @@
     "express-session": "^1.18.1",
     "formidable": "^3.5.2",
     "ioredis": "^5.6.0",
+    "jest-mock-extended": "^4.0.0-beta1",
     "mime-types": "^2.1.35",
     "mongoose": "^8.10.1",
     "mongoose-paginate-v2": "^1.9.0",
@@ -57,6 +58,7 @@
     "redis": "^4.7.0",
     "socket.io": "^4.8.1",
     "tcs": "^10.0.2",
+    "ts-node": "^10.9.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -64,12 +66,18 @@
     "@types/bcrypt": "^5.0.2",
     "@types/connect-mongo": "^3.1.2",
     "@types/cookie-parser": "^1.4.8",
+    "@types/jest": "^29.5.14",
     "@types/mongoose": "^5.11.96",
     "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.4",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.6",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.26.1"
   }
