--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/redis": "^4.0.10",
     "@types/socket.io": "^3.0.1",
+    "@types/stripe": "^8.0.417",
     "@types/uuid": "^10.0.0",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
@@ -57,6 +58,7 @@
     "passport-local": "^1.0.0",
     "redis": "^4.7.0",
     "socket.io": "^4.8.1",
+    "stripe": "^17.7.0",
     "tcs": "^10.0.2",
     "ts-node": "^10.9.2",
     "zod": "^3.24.2"
