--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,18 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.6.0",
+    "@stripe/react-stripe-js": "^3.5.1",
+    "@stripe/stripe-js": "^6.1.0",
     "@tailwindcss/vite": "^4.0.9",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^12.4.7",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.10.1",
+    "path": "^0.12.7",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -32,6 +36,7 @@
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
+    "stripe": "^17.7.0",
     "swiper": "^11.2.5",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.1.0",
